--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "next": "15.0.1",
@@ -16,7 +17,8 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
