--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "sass": "^1.80.4",
     "yup": "^1.4.0"
